# stm32-bindings

./: .gitignore  Cargo.toml  d  d.ps1
.github/workflows/: rust.yml
stm32-bindings-gen/: Cargo.toml
stm32-bindings-gen/inc/: app_conf.h  ble-wba.h  link_layer.h  wpan-wba.h
stm32-bindings-gen/res/: Cargo.toml  README.md  build.rs
stm32-bindings-gen/res/ble/: Cargo.toml  README.md
stm32-bindings-gen/res/ble/src/: lib.rs
stm32-bindings-gen/res/linklayer/: Cargo.toml  README.md  build.rs
stm32-bindings-gen/res/linklayer/src/: lib.rs
stm32-bindings-gen/res/mac/: Cargo.toml  README.md  build.rs
stm32-bindings-gen/res/mac/src/: lib.rs
stm32-bindings-gen/res/src/: lib.rs
stm32-bindings-gen/res/src/bindings/: mod.rs
stm32-bindings-gen/src/: lib.rs
wba-linklayer/: Cargo.toml
wba-linklayer/src/: ble_sys_if.rs  ffi.rs  lib.rs  linklayer_plat.rs  ll_sys_if.rs  mac_sys_if.rs
wpan-wba/: .gitignore  Cargo.toml  build.rs  include.h
wpan-wba/src/: lib.rs
