[package]
name = "stm32-wpan-wba-bindings"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Async STM32 WPAN stack for embedded devices in Rust."
keywords = ["embedded", "async", "stm32", "ble", "wpan"]
categories = ["embedded", "hardware-support", "no-std", "asynchronous"]
repository = "https://github.com/embassy-rs/embassy"
documentation = "https://docs.embassy.dev/embassy-stm32-wpan"

publish = false

[package.metadata.embassy]
build = [
    {target = "thumbv7em-none-eabi", features = ["stm32wb55rg"]},
]

[package.metadata.embassy_docs]
src_base = "https://github.com/embassy-rs/embassy/blob/embassy-stm32-wpan-v$VERSION/embassy-stm32-wpan/src/"
src_base_git = "https://github.com/embassy-rs/embassy/blob/$COMMIT/embassy-stm32-wpan/src/"
target = "thumbv7em-none-eabihf"
features = ["stm32wb55rg", "ble", "mac"]

[package.metadata.docs.rs]
features = ["stm32wb55rg", "ble", "mac"]

[build-dependencies]
bindgen = "0.72.1"

[dependencies]
smoltcp = { version = "0.12.0", optional=true, default-features = false }

defmt = { version = "1.0.1", optional = true }
log = { version = "0.4.17", optional = true }

cortex-m = "0.7.6"
heapless = "0.8"
aligned = "0.4.1"
critical-section = "1.1"

bit_field = "0.10.2"
stm32-device-signature = { version = "0.3.3", features = ["stm32wb5x"] }
stm32wb-hci = { version = "0.17.0", optional = true }
futures-util = { version = "0.3.30", default-features = false }
bitflags = { version = "2.3.3", optional = true }

[features]


extended = []

